data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1734.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\98\80\80\80\00\01\03\65\6e\76\10\75\6e"
    "\72\65\61\63\68\61\62\6c\65\5f\66\75\6e\63\00\00"
    "\03\82\80\80\80\00\01\00\0a\8f\80\80\80\00\01\89"
    "\80\80\80\00\00\41\01\04\40\10\00\0b\0b"
  )
""
)